# gnome-backgrounds-bitday

./: CHANGELOG.md  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
backgrounds/: Makefile.am  bitday-early.xml.in  bitday-late.xml.in  bitday-mid.xml.in  bitday-timed.xml.in  bitday.xml.in  meson.build
