AC_INIT([gnome-backgrounds-bitday],
        [0.1],
        [https://github.com/ghisvail/gnome-backgrounds-bitday/issues],
        [gnome-backgrounds-bitday])

AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE([enable])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CONFIG_FILES([
Makefile
backgrounds/Makefile
])
AC_OUTPUT
