project('gnome-backgrounds-bitday',
  version: '0.3.1',
  meson_version: '>= 0.41.0'
)

prefix = get_option('prefix')

datadir = join_paths(prefix, get_option('datadir'))
backgrounddir = join_paths(datadir, 'backgrounds', 'bitday')
metadatadir = join_paths(datadir, 'gnome-background-properties')

subdir('backgrounds')
